<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg_color" >

    <com.hisu.smart.dj.ui.iactive.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.hisu.smart.dj.ui.iactive.view.TitleBarView>

    <LinearLayout
        android:id="@+id/firm_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="10dp" 
        android:orientation="vertical"
        android:background="@color/white">
         <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

 <!--                
                EditText的宽度、高度：
                android:layout_width="220dp"
                android:layout_height="40dp"
 -->
            <EditText
                android:id="@+id/firmName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_edittext_nb_normal"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/login_firmName"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <requestFocus />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >

            
             <EditText
                android:id="@+id/firmUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_edittext_nb_normal"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/login_firm_username_hint"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >

            <EditText
                android:id="@+id/firmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_edittext_nb_normal"
                android:ellipsize="end"
                android:ems="10"
                android:hint="@string/login_firm_password_hint"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="14sp" >

                
            </EditText>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/login_btn_firm_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firm_login_body" >

        <Button
            android:id="@+id/firm_login"
            style="@style/edit_btn_style"
            android:text="@string/login_btn" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_ts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/login_btn_firm_ll" 
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:lineSpacingExtra="5dp"
            android:singleLine="false"
            android:text="@string/setting_version"
            android:textColor="@color/gray_font"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>